# temporal-daperl

./: .env.example  .gitignore  README.md  pyproject.toml
daperl/: __init__.py
daperl/activities/: __init__.py  agent_activities.py
daperl/agents/: __init__.py  analysis.py  detection.py  execution.py  learning.py  planning.py  reporting.py
daperl/config/: __init__.py  settings.py
daperl/core/: __init__.py  agents.py  models.py  types.py
daperl/llm/: __init__.py  base.py  factory.py
daperl/llm/providers/: __init__.py  litellm_provider.py
daperl/storage/: __init__.py  base.py  json_storage.py
daperl/workflows/: __init__.py  daperl_workflow.py
examples/customer_support/: README.md  data.json  data_loaders.py  domain.py  pyproject.toml  run_example.py  run_ui.py  tools.py
examples/customer_support/ui/: BUGFIXES.md  README.md
examples/customer_support/ui/backend/: main.py
examples/customer_support/ui/frontend/: package-lock.json  package.json
examples/customer_support/ui/frontend/src/: App.css  App.tsx
examples/customer_support/ui/frontend/src/components/: AnalysisResults.tsx  Dashboard.tsx  DetectionResults.tsx  ExecutionResults.tsx  PhaseProgress.tsx  PlanApproval.tsx  ReportingResults.tsx
examples/expense_reports/: README.md  run_example.py
scripts/: approve_workflow.py  query_workflow.py  run_worker.py  start_workflow.py
